<resources>
    <string name="app_name">Navigation</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="nav_inbox">Inbox</string>
    <string name="nav_outbox">Outbox</string>
    <string name="nav_favorite">Favorite</string>
    <string name="nav_archive">Archive</string>
    <string name="nav_trash">Trash</string>
    <string name="nav_spam">Spam</string>
    <string name="nav_family">Family</string>
    <string name="nav_work">Work</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_info">Info</string>
</resources>
